tests/src/frontend/syntax/invalid/matches_positional_arg_name.sk
fun main(): void {
  a is C(b);
}
